--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="265dp"
+        android:layout_height="168dp"
         android:text="Button"
-        tools:layout_editor_absoluteX="151dp"
-        tools:layout_editor_absoluteY="282dp" />
+        tools:layout_editor_absoluteX="64dp"
+        tools:layout_editor_absoluteY="336dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
